--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -15,6 +15,11 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <meta
+      http-equiv="Cache-control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
   </head>
   <body>
     <app-root></app-root>
